--- a/styles/layout/_landing-cta.scss
+++ b/styles/layout/_landing-cta.scss
@@ -29,7 +29,6 @@
       }
 
       @include responsive(T) {
-        width: 472px;
         padding: 40px 0;
 
         .br {
